fix/app code on index.hbs

--- a/views/pages/index.hbs
+++ b/views/pages/index.hbs
@@ -39,7 +39,7 @@
             headers: {
                 'Content-Type': 'application/json',
             },
-            body: JSON.stringify({ code:'nis', passkey })
+            body: JSON.stringify({ code:'frsc', passkey })
         }).then(response => response.json())
         .then((data)=>{
             if(data.status == "success"){
