--- a/views/pages/report.hbs
+++ b/views/pages/report.hbs
@@ -109,7 +109,7 @@
     const fetchReport = (action_type) => {
         return new Promise((resolve, reject)=> {
 
-            fetch(`https://ssoblockchain.herokuapp.com/api/report`, {
+            fetch(`http://localhost:8900/api/report`, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
