--- a/views/pages/manage.hbs
+++ b/views/pages/manage.hbs
@@ -160,7 +160,7 @@
         const user_info = citizens.find( c => c.id == id);
         user_info.status = "approved";
         
-        fetch('https://ssoblockchain.herokuapp.com/api/create_citizen', {
+        fetch('http://localhost:8900/api/create_citizen', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
@@ -190,7 +190,7 @@
         const userPublickey = user_info.publickey;
         const txnRefid = user_info.userid;
         
-        fetch('https://ssoblockchain.herokuapp.com/api/save_new_fields', {
+        fetch('http://localhost:8900/api/save_new_fields', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
