feat/update citizen json

--- a/views/pages/register.hbs
+++ b/views/pages/register.hbs
@@ -181,7 +181,7 @@
                 break;
                 case 2:
                     //set first field -frsc
-                    $('.namefield').eq(0).val(fields[0]);
+                    $('.namefield').eq(0).val(names[0]);
                     //get all remaining names
                     names.forEach((val,index) => {
                         if(index !== 0)
